--- a/src/WWB.Weixin.SDK/WWB.Weixin.SDK.csproj
+++ b/src/WWB.Weixin.SDK/WWB.Weixin.SDK.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Nullable>disable</Nullable>
 		<PackageId>WWB.Weixin.SDK</PackageId>
-		<Version>1.0.4</Version>
+		<Version>1.0.5</Version>
 		<Authors>my6521</Authors>
 		<Description>微信开发SDK</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -20,6 +20,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
 	  <PackageReference Include="WebApiClientCore.Extensions.NewtonsoftJson" Version="2.0.4" />
 	  <PackageReference Include="WebApiClientCore.Extensions.OAuths" Version="2.0.4" />
+      <PackageReference Include="FreeRedis" Version="1.3.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WWB.Weixin.Utility\WWB.Weixin.Utility.csproj" />
